# wsaccel

./: .gitignore  .travis.yml  ChangeLog  MANIFEST.in  Makefile  README  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
bench/: bench.py  bench_gevent.py  bench_tornado.py
cutf8validator/: __init__.py
examples/autobahn/echo/: client.py  server.py
examples/ws4py/: echo_client.py  echo_gevent_server.py
tests/: test_4.py  test_xormask.py
wsaccel/: __init__.py  utf8validator.pyx  xormask.pyx
