[build-system]
requires = [
    "Cython~=3.0.11",
    "setuptools>=35.0.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "wsaccel"
description = "Accelerator for ws4py and AutobahnPython"
version = "0.6.7"
requires-python = ">= 3.9"
readme = "README.rst"
authors = [
  {name = "Inada Naoki", email="songofacandy@gmail.com"},
]
license = {text = "Apache 2.0"}

classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Website = "https://github.com/methane/wsaccel"
