[metadata]
name = wsaccel
version = 0.6.5
description = Accelerator for ws4py and AutobahnPython
maintainer = Inada Naoki
maintainer_email = songofacandy@gmail.com
url = https://github.com/methane/wsaccel
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers=
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
